# Kernel

./: CMakeLists.txt  main.cpp
CMake/: SourceAndDirectoryListing.cmake
CMake/Machine/: ARM.cmake  X86.cmake
Kernel/: Console.cpp  Console.h
Source/System/: Kernel.cpp  Kernel.hpp
Source/System/Bus/: Bus.hpp  BusDevice.cpp  BusDevice.hpp  MemoryResource.cpp  MemoryResource.hpp
Source/System/Device/: AHCI.hpp  Console.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Disk.hpp  Processor.hpp  Timer.hpp
Source/System/Driver/: Driver.hpp  DriverManager.cpp  DriverManager.hpp  DriverRegistry.cpp  DriverRegistry.hpp
Source/System/Driver/Bus/: FakeBus.cpp  FakeBus.hpp  PCIBus.cpp  PCIBus.hpp
Source/System/Driver/Console/: VGAConsole.cpp  VGAConsole.hpp
Source/System/FileSystem/: FileNode.cpp  FileNode.hpp  FileSystem.cpp  FileSystem.hpp
Source/System/FileSystem/FAT32/: CMakeLists.txt  FAT32FileNode.cpp  FAT32FileNode.hpp  FAT32FileSystem.cpp  FAT32FileSystem.hpp
Source/System/Interrupt/: InterruptController.cpp  InterruptController.hpp  InterruptDescriptor.cpp  InterruptDescriptor.hpp
Source/System/Machine/: Machine.cpp  Machine.hpp
Source/System/Machine/ARM/: ARMMachine.cpp  ARMMachine.hpp  CMakeLists.txt  EntryPoint.S  KernelMain.cpp  Linker.ld
Source/System/Machine/X86/: CMakeLists.txt  EntryPoint.S  KernelMain.cpp  Linker.ld  X86Machine.cpp  X86Machine.hpp  X86VirtualMemoryMapper.cpp  X86VirtualMemoryMapper.hpp
Source/System/Machine/X86/Device/: X86Processor.cpp  X86Processor.hpp
Source/System/Machine/X86/Memory/: X86VirtualMemoryMapper.cpp  X86VirtualMemoryMapper.hpp
Source/System/Memory/: MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryController.cpp  MemoryController.hpp  MemoryLayout.cpp  MemoryLayout.hpp  PhysicalMemoryController.cpp  PhysicalMemoryController.hpp  PhysicalMemoryPage.cpp  PhysicalMemoryPage.hpp  VirtualMemoryController.cpp  VirtualMemoryController.hpp  VirtualMemoryMapper.cpp  VirtualMemoryMapper.hpp  VirtualMemoryPage.cpp  VirtualMemoryPage.hpp  VirtualMemorySpace.cpp  VirtualMemorySpace.hpp
Source/System/Process/: Process.cpp  Process.hpp  ProcessController.cpp  ProcessController.hpp  Thread.cpp  Thread.hpp
Source/System/Process/Syscall/: SyscallController.cpp  SyscallController.hpp
Source/System/Support/C/: libc.c  locale.h  memcpy.c  memset.c  printf.c  stack_guard.cpp  string.h
Source/System/Support/C++/: CMakeLists.txt
Source/System/Support/Utility/: Formatting.hpp
Tools/: multiboot_patch.py
